--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "module": "main.js",
   "scripts": {
-    "start": "nodemon -r esm server.js"
+    "start": "nodemon server.js"
   },
   "author": "Michael Juwon",
   "license": "ISC",
@@ -20,7 +19,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "esm": "^3.2.25",
     "express": "^4.18.2",
     "express-formidable": "^1.2.0",
     "express-jwt": "^7.7.5",
@@ -31,8 +29,6 @@
     "morgan": "^1.10.0",
     "nanoid": "^3.3.4",
     "nodemon": "^2.0.20",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
     "qrcode": "^1.5.1",
     "request": "^2.88.2",
     "twilio": "^3.83.1",
@@ -41,17 +37,5 @@
   "engines": {
     "node": ">=14.17.6",
     "npm": ">=6.14.15"
-  },
-  "directories": {
-    "lib": "lib"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mikejuwon/botaniclife.git"
-  },
-  "keywords": [],
-  "bugs": {
-    "url": "https://github.com/mikejuwon/botaniclife/issues"
-  },
-  "homepage": "https://github.com/mikejuwon/botaniclife#readme"
+  }
 }
